...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <EditText
                android:id="@+id/noteTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="8dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="23dp"
...
                    android:src="@drawable/ic_delete"
                    app:tint="@color/delete" />

            </LinearLayout>

            <EditText
                android:id="@+id/noteContentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="15dp"
...
