<resources>
    <string name="app_name">Note</string>
    <string name="save">Save</string>
    <string name="textHint">Write text</string>
    <string name="title">Note</string>
    <string name="add_note_floating_button">Add note</string>
    <string name="note_title">Title</string>
    <string name="delete_single">Delete note</string>
    <string name="delete_all">Delete all</string>
    <string name="empty">Empty</string>
    <string name="delete_popup_item">Delete</string>
    <string name="search_input_hint">Search notes</string>
    <string name="options">Options</string>
    <string name="select_color">Color</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="add">ADD</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="delete_dialog_submit">DELETE</string>
    <string name="delete_note_dialog_title">Delete note</string>
    <string name="delete_note_dialog_message">Are you sure you want to delete this note?</string>
    <string name="delete_all_notes_dialog_title">Delete all</string>
    <string name="delete_all_notes_dialog_message">Are you sure you want to delete all notes?</string>
    <string name="search">Search</string>
</resources>